# arch_ai

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/: 0001_law_chunks.sql
scripts/: seed_laws.sql
src/: config.rs  db.rs  error.rs  handlers.rs  main.rs  models.rs  session.rs  ui_handlers.rs
src/provider/: claude.rs  gemini.rs  mock.rs  mod.rs  openai.rs  openrouter.rs
static/: app.js  style.css
